--- a/members.htm
+++ b/members.htm
@@ -86,7 +86,7 @@
                BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-             Brian Adams
+             *
            </TD>
 
            <TD ALIGN   = "CENTER"
@@ -129,7 +129,7 @@
                BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-             Brian Magnusen
+             Brian
            </TD>
 
            <TD ALIGN   = "CENTER" 
@@ -172,7 +172,7 @@
                BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-             Kevin Davis
+             *
            </TD>
 
            <TD ALIGN   = "CENTER" 
@@ -258,7 +258,7 @@
               BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-            Eric Bingle
+            *
           </TD>
 
           <TD ALIGN   = "CENTER" 
@@ -292,7 +292,7 @@
               BGCOLOR = "A0A0A0">
             <FONT FACE = "Comic Sans MS">
             <A HREF = "chris.htm">
-              Chef
+              Lucifer
             </A>
           </TD>
 
@@ -301,7 +301,7 @@
               BGCOLOR = "A0A0A0">
             <FONT FACE = "Comic Sans MS">
             <font color = "#000000">
-            Chris Adams
+            *
           </TD>
 
           <TD ALIGN   = "CENTER" 
@@ -344,7 +344,7 @@
                BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-            Les Vanemweigen
+            Les
           </TD>
 
           <TD ALIGN   = "CENTER"  
@@ -387,7 +387,7 @@
                BGCOLOR = "A0A0A0">
              <FONT FACE = "Comic Sans MS">
              <font color = "#000000">
-            Jenni Baron
+            Jenni
           </TD>
 
           <TD ALIGN   = "CENTER"  
